Added Accordian to games.html Using jquery For First Feature

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/MDauphin319/WEB501Project1#readme",
   "devDependencies": {
+    "@types/jquery": "^3.3.31",
     "browser-sync": "^2.26.7",
     "delete": "^1.1.0",
     "gulp": "^4.0.2",
@@ -26,7 +27,5 @@
     "gulp-typescript": "^5.0.1",
     "typescript": "^3.6.4"
   },
-  "dependencies": {
-    "@types/jquery": "^3.3.31"
-  }
+  "dependencies": {}
 }
