--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-sass": "^4.0.2",
     "gulp-terser": "^1.2.0",
     "gulp-typescript": "^5.0.1",
+    "simple-parallax-js": "^5.1.0",
     "typescript": "^3.6.4"
   },
   "dependencies": {}
